create: add domain

--- a/src/test.html
+++ b/src/test.html
@@ -11,7 +11,7 @@
 
     <script>
        
-        const API_URL = 'http://localhost:3000';
+        const API_URL = 'http://43.202.46.37:3000';
 
         // 성공 테스트 
         document.getElementById('signupButton').onclick = async () => {
